--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@antv/l7": "^2.0.1",
+    "@antv/l7-maps": "^2.0.1",
     "core-js": "^3.4.4",
     "vue": "^2.6.10"
   },
