--- a/.travis.yml
+++ b/.travis.yml
@@ -25,7 +25,7 @@ after_script:
   - git init
   - git remote add origin master https://github.com/qinyuanpei/VisitorMapV.git
   - git add .
-  - git commit -m "Update Blog By Travis-CI With Build $TRAVIS_BUILD_NUMBER"
+  - git commit -m "Build $TRAVIS_BUILD_NUMBER"
   - git push --force --quiet "https://${CI_TOKEN}@${GH_REF}" master:gh-pages
 
 addons:
