增加不同环境 & 调整脚本

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
   # - npm run lint
   # - npm run test:ci
   #- npm run test:unit
-  - npm run build
+  - npm run build:prod
 
 after_script:
   - git config user.name "qinyuanpei"
