调整工作流

--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -1,10 +1,9 @@
-name: Python package
+name: Run Python Scripts
 
 on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
     strategy:
       max-parallel: 4
