--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -25,8 +25,4 @@ jobs:
         pip install -r requirements.txt
     - name: Run Scripts
       run: |
-        python ./scripts/locationSummary.py 
-      with: 
-        LEANCLOUD-APP-ID: ${{secrets.LEANCLOUD-APP-ID}}
-        LEANCLOUD-APP-KEY: ${{secrets.LEANCLOUD-APP-KEY}}
-        GAODE_MAP_API_KEY: ${{secrets.GAODE_MAP_API_KEY}}
+        python ./scripts/locationSummary.py ${{secrets.LEANCLOUD-APP-ID}} ${{secrets.LEANCLOUD-APP-ID}} ${{secrets.GAODE_MAP_API_KEY}}
