--- a/.github/workflows/python.yml
+++ b/.github/workflows/python.yml
@@ -22,6 +22,7 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
+        pip install leancloud
         pip install -r requirements.txt
     - name: Run Scripts
       run: |
